syntax = "proto3";
package em.liquidityprovider.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/e-money/em-ledger/x/liquidityprovider/types";

message MsgMintTokens {
  string liquidity_provider = 1
      [ (gogoproto.moretags) = "yaml:\"liquidity_provider\"" ];
  repeated cosmos.base.v1beta1.DecCoin amount = 2 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

message MsgBurnTokens {
  string liquidity_provider = 1
      [ (gogoproto.moretags) = "yaml:\"liquidity_provider\"" ];
  repeated cosmos.base.v1beta1.DecCoin amount = 2 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}